--- a/try.html
+++ b/try.html
@@ -171,6 +171,10 @@ I made the GitHub Badge Service.
   <td><img src='/appveyor/ci/gruntjs/grunt.svg' alt=''/></td>
   <td><code>http://img.shields.io/appveyor/ci/gruntjs/grunt.svg</code></td>
   </tr>
+  <tr><th> Codeship: </th>
+  <td><img src='/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1.svg' alt=''/></td>
+  <td><code>http://img.shields.io/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1.svg</code></td>
+  </tr>
   <tr><th> Coveralls: </th>
   <td><img src='/coveralls/jekyll/jekyll.svg' alt=''/></td>
   <td><code>http://img.shields.io/coveralls/jekyll/jekyll.svg</code></td>
