website: show scrutinizer branch selection
Related to #238.

--- a/index.html
+++ b/index.html
@@ -194,6 +194,9 @@ I made the GitHub Badge Service.
   <tr><th> Scrutinizer Coverage: </th>
   <td><img src='//img.shields.io/scrutinizer/coverage/g/filp/whoops.svg' alt=''/></td>
   <td><code>http://img.shields.io/scrutinizer/coverage/g/filp/whoops.svg</code></td>
+  <tr><th> Scrutinizer branch: </th>
+  <td><img src='//img.shields.io/scrutinizer/coverage/g/phpmyadmin/phpmyadmin/master.svg' alt=''/></td>
+  <td><code>http://img.shields.io/scrutinizer/coverage/g/phpmyadmin/phpmyadmin/master.svg</code></td>
   <tr><th> Jenkins: </th>
   <td><img src='//img.shields.io/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg' alt=''/></td>
   <td><code>http://img.shields.io/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg</code></td>
