--- a/try.html
+++ b/try.html
@@ -282,6 +282,10 @@ I made the GitHub Badge Service.
   <td><img src='/npm/v/npm.svg' alt=''/></td>
   <td><code>http://img.shields.io/npm/v/npm.svg</code></td>
   </tr>
+  <tr><th> node: </th>
+  <td><img src='/node/v/gh-badges.svg' alt=''/></td>
+  <td><code>http://img.shields.io/node/v/gh-badges.svg</code></td>
+  </tr>
   <tr><th> PyPI: </th>
   <td><img src='/pypi/v/nine.svg' alt=''/></td>
   <td><code>http://img.shields.io/pypi/v/nine.svg</code></td>
