--- a/try.html
+++ b/try.html
@@ -306,6 +306,10 @@ I made the GitHub Badge Service.
   <td><img src='/cocoapods/v/AFNetworking.svg' alt='' /></td>
   <td><code>http://img.shields.io/cocoapods/v/AFNetworking.svg</code></td>
   </tr>
+  <tr><th> Bower: </th>
+  <td><img src='/bower/v/bootstrap.svg' alt='' /></td>
+  <td><code>http://img.shields.io/bower/v/bootstrap.svg</code></td>
+  </tr>
   <tr><th> Hex.pm: </th>
   <td><img src='/hexpm/v/plug.svg' alt=''/></td>
   <td><code>http://img.shields.io/hexpm/v/plug.svg</code></td>
