--- a/try.html
+++ b/try.html
@@ -204,6 +204,10 @@ I made the GitHub Badge Service.
   <td><img src='/jenkins/t/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg' alt=''/></td>
   <td><code>http://img.shields.io/jenkins/t/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg</code></td>
   </tr>
+  <tr><th> Codecov: </th>
+  <td><img src='/codecov/c/github/codecov/example-python.svg' alt=''/></td>
+  <td><code>http://img.shields.io/codecov/c/github/codecov/example-python.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Downloads </h3>
 <table><tbody>
