Added `hackage-deps` shield that shows whether the dependency version
bounds of a Hackage package are up-to-date or outdated.
Uses the RSS feeds on packdeps.haskellers.com to query for outdated
dependencies.

--- a/try.html
+++ b/try.html
@@ -302,6 +302,10 @@ I made the GitHub Badge Service.
   <td><img src='/hackage/v/lens.svg' alt=''/></td>
   <td><code>http://img.shields.io/hackage/v/lens.svg</code></td>
   </tr>
+  <tr><th> Hackage-Deps: </th>
+  <td><img src='/hackage-deps/v/lens.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hackage-deps/v/lens.svg</code></td>
+  </tr>
   <tr><th> Packagist: </th>
   <td><img src='/packagist/v/symfony/symfony.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/v/symfony/symfony.svg</code></td>
