--- a/try.html
+++ b/try.html
@@ -318,6 +318,10 @@ I made the GitHub Badge Service.
   <td><img src='/bower/v/bootstrap.svg' alt='' /></td>
   <td><code>http://img.shields.io/bower/v/bootstrap.svg</code></td>
   </tr>
+  <tr><th> Pub: </th>
+  <td><img src='/pub/v/box2d.svg' alt=''/></td>
+  <td><code>http://img.shields.io/pub/v/box2d.svg</code></td>
+  </tr>
   <tr><th> Hex.pm: </th>
   <td><img src='/hexpm/v/plug.svg' alt=''/></td>
   <td><code>http://img.shields.io/hexpm/v/plug.svg</code></td>
