Website: codecov, hackage, pub, nuget/myget

--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/jenkins/t/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg' alt=''/></td>
   <td><code>http://img.shields.io/jenkins/t/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg</code></td>
   </tr>
+  <tr><th> Codecov: </th>
+  <td><img src='//img.shields.io/codecov/c/github/codecov/example-python.svg' alt=''/></td>
+  <td><code>http://img.shields.io/codecov/c/github/codecov/example-python.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Downloads </h3>
 <table><tbody>
@@ -299,6 +303,10 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/hackage/v/lens.svg' alt=''/></td>
   <td><code>http://img.shields.io/hackage/v/lens.svg</code></td>
   </tr>
+  <tr><th> Hackage-Deps: </th>
+  <td><img src='//img.shields.io/hackage-deps/v/lens.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hackage-deps/v/lens.svg</code></td>
+  </tr>
   <tr><th> Packagist: </th>
   <td><img src='//img.shields.io/packagist/v/symfony/symfony.svg' alt=''/></td>
   <td><code>http://img.shields.io/packagist/v/symfony/symfony.svg</code></td>
@@ -310,6 +318,10 @@ I made the GitHub Badge Service.
   <tr><th> Bower: </th>
   <td><img src='//img.shields.io/bower/v/bootstrap.svg' alt='' /></td>
   <td><code>http://img.shields.io/bower/v/bootstrap.svg</code></td>
+  </tr>
+  <tr><th> Pub: </th>
+  <td><img src='//img.shields.io/pub/v/box2d.svg' alt=''/></td>
+  <td><code>http://img.shields.io/pub/v/box2d.svg</code></td>
   </tr>
   <tr><th> Hex.pm: </th>
   <td><img src='//img.shields.io/hexpm/v/plug.svg' alt=''/></td>
@@ -331,9 +343,17 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/nuget/v/Nuget.Core.svg' alt=''/></td>
   <td><code>http://img.shields.io/nuget/v/Nuget.Core.svg</code></td>
   </tr>
+  <tr><th> NuGet Pre Release: </th>
+  <td><img src='//img.shields.io/nuget/vpre/Nuget.Core.svg' alt=''/></td>
+  <td><code>http://img.shields.io/nuget/vpre/Nuget.Core.svg</code></td>
+  </tr>
   <tr><th> MyGet: </th>
   <td><img src='//img.shields.io/myget/yolodev/v/FSharpSupport.svg' alt=''/></td>
   <td><code>http://img.shields.io/myget/yolodev/v/FSharpSupport.svg</code></td>
+  </tr>
+  <tr><th> MyGet Pre Release: </th>
+  <td><img src='//img.shields.io/myget/yolodev/vpre/FSharpSupport.svg' alt=''/></td>
+  <td><code>http://img.shields.io/myget/yolodev/vpre/FSharpSupport.svg</code></td>
   </tr>
   <tr><th> Chocolatey: </th>
   <td><img src='//img.shields.io/chocolatey/v/git.svg' alt=''/></td>
