--- a/index.html
+++ b/index.html
@@ -209,6 +209,14 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/codecov/c/github/codecov/example-python.svg' alt=''/></td>
   <td><code>http://img.shields.io/codecov/c/github/codecov/example-python.svg</code></td>
   </tr>
+  <tr><th> HHVM: </th>
+  <td><img src='//img.shields.io/hhvm/symfony/symfony.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hhvm/symfony/symfony.svg</code></td>
+  </tr>
+  <tr><th> HHVM (branch): </th>
+  <td><img src='//img.shields.io/hhvm/symfony/symfony/2.4.0.0.svg' alt=''/></td>
+  <td><code>http://img.shields.io/hhvm/symfony/symfony/2.4.0.0.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Downloads </h3>
 <table><tbody>
