Mention support for json
Closes #264

--- a/try.html
+++ b/try.html
@@ -399,6 +399,10 @@ One of those two designs may become the default one. Vote by using them!
   </tr>
 </tbody></table>
 
+<p>
+We also support <code>.json</code>, but use that responsively.
+</p>
+
 <h2> Like This? </h2>
 
 <p>
