--- a/try.html
+++ b/try.html
@@ -154,6 +154,10 @@ I made the GitHub Badge Service.
   <td><img src='/travis/joyent/node/v0.6.svg' alt=''/></td>
   <td><code>http://img.shields.io/travis/joyent/node/v0.6.svg</code></td>
   </tr>
+  <tr><th> Wercker: </th>
+  <td><img src='/wercker/54330318b4ce963d50020750.svg' alt=''/></td>
+  <td><code>http://img.shields.io/wercker/54330318b4ce963d50020750.svg</code></td>
+  </tr>
   <tr><th> TeamCity CodeBetter: </th>
   <td><img src='/teamcity/codebetter/bt428.svg' alt=''/></td>
   <td><code>http://img.shields.io/teamcity/codebetter/bt428.svg</code></td>
