--- a/try.html
+++ b/try.html
@@ -147,6 +147,10 @@ I made the GitHub Badge Service.
     <td><img src='/cocoapods/p/AFNetworking.svg' alt='' /></td>
     <td><code>http://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
   </tr>
+  <tr><th> Wheelmap: </th>
+    <td><img src='/wheelmap/a/2323004600.svg' alt='' /></td>
+    <td><code>http://img.shields.io/wheelmap/a/2323004600.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Build </h3>
 <table><tbody>
