--- a/index.html
+++ b/index.html
@@ -93,129 +93,143 @@ I made the GitHub Badge Service.
 <h3> Miscellaneous </h3>
 <table><tbody>
   <tr><th> Gratipay: </th>
-  <td><img src='//img.shields.io/gratipay/JSFiddle.svg' alt=''/></td>
-  <td><code>http://img.shields.io/gratipay/JSFiddle.svg</code></td>
+    <td><img src='//img.shields.io/gratipay/JSFiddle.svg' alt=''/></td>
+    <td><code>http://img.shields.io/gratipay/JSFiddle.svg</code></td>
   </tr>
   <tr><th> Code Climate: </th>
-  <td><img src='//img.shields.io/codeclimate/github/kabisaict/flow.svg' alt=''/></td>
-  <td><code>http://img.shields.io/codeclimate/github/kabisaict/flow.svg</code></td>
+    <td><img src='//img.shields.io/codeclimate/github/kabisaict/flow.svg' alt=''/></td>
+    <td><code>http://img.shields.io/codeclimate/github/kabisaict/flow.svg</code></td>
   </tr>
   <tr><th> Code Climate: </th>
-  <td><img src='//img.shields.io/codeclimate/coverage/github/triAGENS/ashikawa-core.svg' alt=''/></td>
-  <td><code>http://img.shields.io/codeclimate/coverage/github/triAGENS/ashikawa-core.svg</code></td>
+    <td><img src='//img.shields.io/codeclimate/coverage/github/triAGENS/ashikawa-core.svg' alt=''/></td>
+    <td><code>http://img.shields.io/codeclimate/coverage/github/triAGENS/ashikawa-core.svg</code></td>
   </tr>
   <tr><th> Gemnasium: </th>
-  <td><img src='//img.shields.io/gemnasium/mathiasbynens/he.svg' alt=''/></td>
-  <td><code>http://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
+    <td><img src='//img.shields.io/gemnasium/mathiasbynens/he.svg' alt=''/></td>
+    <td><code>http://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
   </tr>
   <tr><th> David: </th>
-  <td><img src='//img.shields.io/david/strongloop/express.svg' alt=''/></td>
-  <td><code>http://img.shields.io/david/strongloop/express.svg</code></td>
+    <td><img src='//img.shields.io/david/strongloop/express.svg' alt=''/></td>
+    <td><code>http://img.shields.io/david/strongloop/express.svg</code></td>
   </tr>
   <tr><th> David: </th>
-  <td><img src='//img.shields.io/david/dev/strongloop/express.svg' alt=''/></td>
-  <td><code>http://img.shields.io/david/dev/strongloop/express.svg</code></td>
+    <td><img src='//img.shields.io/david/dev/strongloop/express.svg' alt=''/></td>
+    <td><code>http://img.shields.io/david/dev/strongloop/express.svg</code></td>
   </tr>
   <tr><th> David: </th>
-  <td><img src='//img.shields.io/david/peer/webcomponents/generator-element.svg' alt=''/></td>
-  <td><code>http://img.shields.io/david/peer/webcomponents/generator-element.svg</code></td>
+    <td><img src='//img.shields.io/david/peer/webcomponents/generator-element.svg' alt=''/></td>
+    <td><code>http://img.shields.io/david/peer/webcomponents/generator-element.svg</code></td>
+  </tr>
+  <tr><th> Hackage-Deps: </th>
+    <td><img src='//img.shields.io/hackage-deps/v/lens.svg' alt=''/></td>
+    <td><code>http://img.shields.io/hackage-deps/v/lens.svg</code></td>
   </tr>
   <tr><th> Packagist: </th>
-  <td><img src='//img.shields.io/packagist/l/doctrine/orm.svg' alt=''/></td>
-  <td><code>http://img.shields.io/packagist/l/doctrine/orm.svg</code></td>
+    <td><img src='//img.shields.io/packagist/l/doctrine/orm.svg' alt=''/></td>
+    <td><code>http://img.shields.io/packagist/l/doctrine/orm.svg</code></td>
   </tr>
   <tr><th> npm: </th>
-  <td><img src='//img.shields.io/npm/l/express.svg' alt=''/></td>
-  <td><code>http://img.shields.io/npm/l/express.svg</code></td>
+    <td><img src='//img.shields.io/npm/l/express.svg' alt=''/></td>
+    <td><code>http://img.shields.io/npm/l/express.svg</code></td>
   </tr>
   <tr><th> PyPI: </th>
-  <td><img src='//img.shields.io/pypi/l/Django.svg' alt=''/></td>
-  <td><code>http://img.shields.io/pypi/l/Django.svg</code></td>
-  </tr>
-  <tr><th> CocoaPods: </th>
-  <td><img src='//img.shields.io/cocoapods/l/AFNetworking.svg' alt='' /></td>
-  <td><code>http://img.shields.io/cocoapods/l/AFNetworking.svg</code></td>
-  </tr>
-  <tr><th> CocoaPods: </th>
-  <td><img src='//img.shields.io/cocoapods/p/AFNetworking.svg' alt='' /></td>
-  <td><code>http://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
+    <td><img src='//img.shields.io/pypi/l/Django.svg' alt=''/></td>
+    <td><code>http://img.shields.io/pypi/l/Django.svg</code></td>
   </tr>
   <tr><th> Hex.pm: </th>
-  <td><img src='//img.shields.io/hexpm/l/plug.svg' alt=''/></td>
-  <td><code>http://img.shields.io/hexpm/l/plug.svg</code></td>
+    <td><img src='//img.shields.io/hexpm/l/plug.svg' alt=''/></td>
+    <td><code>http://img.shields.io/hexpm/l/plug.svg</code></td>
+  </tr>
+  <tr><th> CocoaPods: </th>
+    <td><img src='//img.shields.io/cocoapods/l/AFNetworking.svg' alt='' /></td>
+    <td><code>http://img.shields.io/cocoapods/l/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th> CocoaPods: </th>
+    <td><img src='//img.shields.io/cocoapods/p/AFNetworking.svg' alt='' /></td>
+    <td><code>http://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th> Wheelmap: </th>
+    <td><img src='//img.shields.io/wheelmap/a/2323004600.svg' alt='' /></td>
+    <td><code>http://img.shields.io/wheelmap/a/2323004600.svg</code></td>
   </tr>
 </tbody></table>
 <h3> Build </h3>
 <table><tbody>
   <tr><th> Travis: </th>
-  <td><img src='//img.shields.io/travis/joyent/node.svg' alt=''/></td>
-  <td><code>http://img.shields.io/travis/joyent/node.svg</code></td>
+    <td><img src='//img.shields.io/travis/joyent/node.svg' alt=''/></td>
+    <td><code>http://img.shields.io/travis/joyent/node.svg</code></td>
   </tr>
   <tr><th> Travis branch: </th>
-  <td><img src='//img.shields.io/travis/joyent/node/v0.6.svg' alt=''/></td>
-  <td><code>http://img.shields.io/travis/joyent/node/v0.6.svg</code></td>
+    <td><img src='//img.shields.io/travis/joyent/node/v0.6.svg' alt=''/></td>
+    <td><code>http://img.shields.io/travis/joyent/node/v0.6.svg</code></td>
+  </tr>
+  <tr><th> Wercker: </th>
+    <td><img src='//img.shields.io/wercker/ci/54330318b4ce963d50020750.svg' alt=''/></td>
+    <td><code>http://img.shields.io/wercker/ci/54330318b4ce963d50020750.svg</code></td>
   </tr>
   <tr><th> TeamCity CodeBetter: </th>
-  <td><img src='//img.shields.io/teamcity/codebetter/bt428.svg' alt=''/></td>
-  <td><code>http://img.shields.io/teamcity/codebetter/bt428.svg</code></td>
-  </tr>
+    <td><img src='//img.shields.io/teamcity/codebetter/bt428.svg' alt=''/></td>
+    <td><code>http://img.shields.io/teamcity/codebetter/bt428.svg</code></td>
   </tr>
   <tr><th> TeamCity (simple build status): </th>
-  <td><img src='//img.shields.io/teamcity/http/teamcity.jetbrains.com/s/bt345.svg' alt=''/></td>
-  <td><code>http://img.shields.io/teamcity/http/teamcity.jetbrains.com/s/bt345.svg</code></td>
+    <td><img src='//img.shields.io/teamcity/http/teamcity.jetbrains.com/s/bt345.svg' alt=''/></td>
+    <td><code>http://img.shields.io/teamcity/http/teamcity.jetbrains.com/s/bt345.svg</code></td>
   </tr>
   <tr><th> TeamCity (full build status): </th>
-  <td><img src='//img.shields.io/teamcity/http/teamcity.jetbrains.com/e/bt345.svg' alt=''/></td>
-  <td><code>http://img.shields.io/teamcity/http/teamcity.jetbrains.com/e/bt345.svg</code></td>
+    <td><img src='//img.shields.io/teamcity/http/teamcity.jetbrains.com/e/bt345.svg' alt=''/></td>
+    <td><code>http://img.shields.io/teamcity/http/teamcity.jetbrains.com/e/bt345.svg</code></td>
   </tr>
   <tr><th> AppVeyor: </th>
-  <td><img src='//img.shields.io/appveyor/ci/gruntjs/grunt.svg' alt=''/></td>
-  <td><code>http://img.shields.io/appveyor/ci/gruntjs/grunt.svg</code></td>
+    <td><img src='//img.shields.io/appveyor/ci/gruntjs/grunt.svg' alt=''/></td>
+    <td><code>http://img.shields.io/appveyor/ci/gruntjs/grunt.svg</code></td>
   </tr>
   <tr><th> Codeship: </th>
-  <td><img src='//img.shields.io/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1.svg' alt=''/></td>
-  <td><code>http://img.shields.io/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1.svg</code></td>
+    <td><img src='//img.shields.io/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1.svg' alt=''/></td>
+    <td><code>http://img.shields.io/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1.svg</code></td>
   </tr>
-  <tr><th> Coveralls: </th>
-  <td><img src='//img.shields.io/coveralls/jekyll/jekyll.svg' alt=''/></td>
-  <td><code>http://img.shields.io/coveralls/jekyll/jekyll.svg</code></td>
-  </tr>
-  <tr><th> Coveralls branch: </th>
-  <td><img src='//img.shields.io/coveralls/jekyll/jekyll/master.svg' alt=''/></td>
-  <td><code>http://img.shields.io/coveralls/jekyll/jekyll/master.svg</code></td>
-  </tr>
-  <tr><th> TeamCity CodeBetter Coverage: </th>
-  <td><img src='//img.shields.io/teamcity/coverage/bt1242.svg' alt=''/></td>
-  <td><code>http://img.shields.io/teamcity/coverage/bt1242.svg</code></td>
-  </tr>
-  <tr><th> Scrutinizer: </th>
-  <td><img src='//img.shields.io/scrutinizer/g/filp/whoops.svg' alt=''/></td>
-  <td><code>http://img.shields.io/scrutinizer/g/filp/whoops.svg</code></td>
-  <tr><th> Scrutinizer Coverage: </th>
-  <td><img src='//img.shields.io/scrutinizer/coverage/g/filp/whoops.svg' alt=''/></td>
-  <td><code>http://img.shields.io/scrutinizer/coverage/g/filp/whoops.svg</code></td>
-  <tr><th> Scrutinizer branch: </th>
-  <td><img src='//img.shields.io/scrutinizer/coverage/g/phpmyadmin/phpmyadmin/master.svg' alt=''/></td>
-  <td><code>http://img.shields.io/scrutinizer/coverage/g/phpmyadmin/phpmyadmin/master.svg</code></td>
   <tr><th> Jenkins: </th>
-  <td><img src='//img.shields.io/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg' alt=''/></td>
-  <td><code>http://img.shields.io/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg</code></td>
+    <td><img src='//img.shields.io/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg' alt=''/></td>
+    <td><code>http://img.shields.io/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg</code></td>
   </tr>
   <tr><th> Jenkins tests: </th>
-  <td><img src='//img.shields.io/jenkins/t/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg' alt=''/></td>
-  <td><code>http://img.shields.io/jenkins/t/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg</code></td>
+    <td><img src='//img.shields.io/jenkins/t/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg' alt=''/></td>
+    <td><code>http://img.shields.io/jenkins/t/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg</code></td>
+  </tr>
+  <tr><th> Coveralls: </th>
+    <td><img src='//img.shields.io/coveralls/jekyll/jekyll.svg' alt=''/></td>
+    <td><code>http://img.shields.io/coveralls/jekyll/jekyll.svg</code></td>
+  </tr>
+  <tr><th> Coveralls branch: </th>
+    <td><img src='//img.shields.io/coveralls/jekyll/jekyll/master.svg' alt=''/></td>
+    <td><code>http://img.shields.io/coveralls/jekyll/jekyll/master.svg</code></td>
+  </tr>
+  <tr><th> TeamCity CodeBetter Coverage: </th>
+    <td><img src='//img.shields.io/teamcity/coverage/bt1242.svg' alt=''/></td>
+    <td><code>http://img.shields.io/teamcity/coverage/bt1242.svg</code></td>
+  </tr>
+  <tr><th> Scrutinizer: </th>
+    <td><img src='//img.shields.io/scrutinizer/g/filp/whoops.svg' alt=''/></td>
+    <td><code>http://img.shields.io/scrutinizer/g/filp/whoops.svg</code></td>
+  </tr>
+  <tr><th> Scrutinizer Coverage: </th>
+    <td><img src='//img.shields.io/scrutinizer/coverage/g/filp/whoops.svg' alt=''/></td>
+    <td><code>http://img.shields.io/scrutinizer/coverage/g/filp/whoops.svg</code></td>
+  </tr>
+  <tr><th> Scrutinizer branch: </th>
+    <td><img src='//img.shields.io/scrutinizer/coverage/g/phpmyadmin/phpmyadmin/master.svg' alt=''/></td>
+    <td><code>http://img.shields.io/scrutinizer/coverage/g/phpmyadmin/phpmyadmin/master.svg</code></td>
   </tr>
   <tr><th> Codecov: </th>
-  <td><img src='//img.shields.io/codecov/c/github/codecov/example-python.svg' alt=''/></td>
-  <td><code>http://img.shields.io/codecov/c/github/codecov/example-python.svg</code></td>
+    <td><img src='//img.shields.io/codecov/c/github/codecov/example-python.svg' alt=''/></td>
+    <td><code>http://img.shields.io/codecov/c/github/codecov/example-python.svg</code></td>
   </tr>
   <tr><th> HHVM: </th>
-  <td><img src='//img.shields.io/hhvm/symfony/symfony.svg' alt=''/></td>
-  <td><code>http://img.shields.io/hhvm/symfony/symfony.svg</code></td>
+    <td><img src='//img.shields.io/hhvm/symfony/symfony.svg' alt=''/></td>
+    <td><code>http://img.shields.io/hhvm/symfony/symfony.svg</code></td>
   </tr>
   <tr><th> HHVM (branch): </th>
-  <td><img src='//img.shields.io/hhvm/symfony/symfony/2.4.0.0.svg' alt=''/></td>
-  <td><code>http://img.shields.io/hhvm/symfony/symfony/2.4.0.0.svg</code></td>
+    <td><img src='//img.shields.io/hhvm/symfony/symfony/2.4.0.0.svg' alt=''/></td>
+    <td><code>http://img.shields.io/hhvm/symfony/symfony/2.4.0.0.svg</code></td>
   </tr>
 </tbody></table>
 <h3> Downloads </h3>
@@ -310,10 +324,6 @@ I made the GitHub Badge Service.
   <tr><th> Hackage: </th>
   <td><img src='//img.shields.io/hackage/v/lens.svg' alt=''/></td>
   <td><code>http://img.shields.io/hackage/v/lens.svg</code></td>
-  </tr>
-  <tr><th> Hackage-Deps: </th>
-  <td><img src='//img.shields.io/hackage-deps/v/lens.svg' alt=''/></td>
-  <td><code>http://img.shields.io/hackage-deps/v/lens.svg</code></td>
   </tr>
   <tr><th> Packagist: </th>
   <td><img src='//img.shields.io/packagist/v/symfony/symfony.svg' alt=''/></td>
