--- a/try.html
+++ b/try.html
@@ -242,6 +242,22 @@ I made the GitHub Badge Service.
   <td><img src='/wordpress/plugin/dt/akismet.svg' alt=''/></td>
   <td><code>http://img.shields.io/wordpress/plugin/dt/akismet.svg</code></td>
   </tr>
+  <tr><th> SourceForge: </th>
+  <td><img src='/sourceforge/dm/sevenzip.svg' alt=''/></td>
+  <td><code>http://img.shields.io/sourceforge/dm/sevenzip.svg</code></td>
+  </tr>
+  <tr><th> SourceForge: </th>
+  <td><img src='/sourceforge/dw/sevenzip.svg' alt=''/></td>
+  <td><code>http://img.shields.io/sourceforge/dw/sevenzip.svg</code></td>
+  </tr>
+  <tr><th> SourceForge: </th>
+  <td><img src='/sourceforge/dd/sevenzip.svg' alt=''/></td>
+  <td><code>http://img.shields.io/sourceforge/dd/sevenzip.svg</code></td>
+  </tr>
+  <tr><th> SourceForge: </th>
+  <td><img src='/sourceforge/dt/sevenzip.svg' alt=''/></td>
+  <td><code>http://img.shields.io/sourceforge/dt/sevenzip.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Version </h3>
 <table><tbody>
