Wordpress: website examples
Also, comments.

--- a/try.html
+++ b/try.html
@@ -238,6 +238,10 @@ I made the GitHub Badge Service.
   <td><img src='/hexpm/dt/plug.svg' alt=''/></td>
   <td><code>http://img.shields.io/hexpm/dt/plug.svg</code></td>
   </tr>
+  <tr><th> Wordpress: </th>
+  <td><img src='/wordpress/plugin/dt/akismet.svg' alt=''/></td>
+  <td><code>http://img.shields.io/wordpress/plugin/dt/akismet.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Version </h3>
 <table><tbody>
@@ -321,6 +325,14 @@ I made the GitHub Badge Service.
   <td><img src='/maven-central/v/org.apache.maven/apache-maven.svg' alt=''/></td>
   <td><code>http://img.shields.io/maven-central/v/org.apache.maven/apache-maven.svg</code></td>
   </tr>
+  <tr><th> Wordpress plugin: </th>
+  <td><img src='/wordpress/plugin/v/akismet.svg' alt=''/></td>
+  <td><code>https://img.shields.io/wordpress/plugin/v/akismet.svg</code></td>
+  </tr>
+  <tr><th> Wordpress: </th>
+  <td><img src='/wordpress/v/akismet.svg' alt=''/></td>
+  <td><code>https://img.shields.io/wordpress/v/akismet.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3> Miscellaneous </h3>
@@ -392,6 +404,10 @@ I made the GitHub Badge Service.
   <tr><th> GitHub: </th>
   <td><img src='/github/issues/badges/shields.svg' alt=''/></td>
   <td><code>http://img.shields.io/github/issues/badges/shields.svg</code></td>
+  </tr>
+  <tr><th> Wordpress rating: </th>
+  <td><img src='/wordpress/plugin/r/akismet.svg' alt=''/></td>
+  <td><code>http://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
   </tr>
 </tbody></table>
 
