--- a/index.html
+++ b/index.html
@@ -90,69 +90,6 @@ I made the GitHub Badge Service.
 
 <h2> Supported Services </h2>
 
-<h3> Miscellaneous </h3>
-<table><tbody>
-  <tr><th> Gratipay: </th>
-    <td><img src='//img.shields.io/gratipay/JSFiddle.svg' alt=''/></td>
-    <td><code>http://img.shields.io/gratipay/JSFiddle.svg</code></td>
-  </tr>
-  <tr><th> Code Climate: </th>
-    <td><img src='//img.shields.io/codeclimate/github/kabisaict/flow.svg' alt=''/></td>
-    <td><code>http://img.shields.io/codeclimate/github/kabisaict/flow.svg</code></td>
-  </tr>
-  <tr><th> Code Climate: </th>
-    <td><img src='//img.shields.io/codeclimate/coverage/github/triAGENS/ashikawa-core.svg' alt=''/></td>
-    <td><code>http://img.shields.io/codeclimate/coverage/github/triAGENS/ashikawa-core.svg</code></td>
-  </tr>
-  <tr><th> Gemnasium: </th>
-    <td><img src='//img.shields.io/gemnasium/mathiasbynens/he.svg' alt=''/></td>
-    <td><code>http://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
-  </tr>
-  <tr><th> David: </th>
-    <td><img src='//img.shields.io/david/strongloop/express.svg' alt=''/></td>
-    <td><code>http://img.shields.io/david/strongloop/express.svg</code></td>
-  </tr>
-  <tr><th> David: </th>
-    <td><img src='//img.shields.io/david/dev/strongloop/express.svg' alt=''/></td>
-    <td><code>http://img.shields.io/david/dev/strongloop/express.svg</code></td>
-  </tr>
-  <tr><th> David: </th>
-    <td><img src='//img.shields.io/david/peer/webcomponents/generator-element.svg' alt=''/></td>
-    <td><code>http://img.shields.io/david/peer/webcomponents/generator-element.svg</code></td>
-  </tr>
-  <tr><th> Hackage-Deps: </th>
-    <td><img src='//img.shields.io/hackage-deps/v/lens.svg' alt=''/></td>
-    <td><code>http://img.shields.io/hackage-deps/v/lens.svg</code></td>
-  </tr>
-  <tr><th> Packagist: </th>
-    <td><img src='//img.shields.io/packagist/l/doctrine/orm.svg' alt=''/></td>
-    <td><code>http://img.shields.io/packagist/l/doctrine/orm.svg</code></td>
-  </tr>
-  <tr><th> npm: </th>
-    <td><img src='//img.shields.io/npm/l/express.svg' alt=''/></td>
-    <td><code>http://img.shields.io/npm/l/express.svg</code></td>
-  </tr>
-  <tr><th> PyPI: </th>
-    <td><img src='//img.shields.io/pypi/l/Django.svg' alt=''/></td>
-    <td><code>http://img.shields.io/pypi/l/Django.svg</code></td>
-  </tr>
-  <tr><th> Hex.pm: </th>
-    <td><img src='//img.shields.io/hexpm/l/plug.svg' alt=''/></td>
-    <td><code>http://img.shields.io/hexpm/l/plug.svg</code></td>
-  </tr>
-  <tr><th> CocoaPods: </th>
-    <td><img src='//img.shields.io/cocoapods/l/AFNetworking.svg' alt='' /></td>
-    <td><code>http://img.shields.io/cocoapods/l/AFNetworking.svg</code></td>
-  </tr>
-  <tr><th> CocoaPods: </th>
-    <td><img src='//img.shields.io/cocoapods/p/AFNetworking.svg' alt='' /></td>
-    <td><code>http://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
-  </tr>
-  <tr><th> Wheelmap: </th>
-    <td><img src='//img.shields.io/wheelmap/a/2323004600.svg' alt='' /></td>
-    <td><code>http://img.shields.io/wheelmap/a/2323004600.svg</code></td>
-  </tr>
-</tbody></table>
 <h3> Build </h3>
 <table><tbody>
   <tr><th> Travis: </th>
@@ -175,8 +112,8 @@ I made the GitHub Badge Service.
     <td><img src='//img.shields.io/teamcity/http/teamcity.jetbrains.com/s/bt345.svg' alt=''/></td>
     <td><code>http://img.shields.io/teamcity/http/teamcity.jetbrains.com/s/bt345.svg</code></td>
   </tr>
-  <tr><th> TeamCity (full build status): </th>
-    <td><img src='//img.shields.io/teamcity/http/teamcity.jetbrains.com/e/bt345.svg' alt=''/></td>
+  <tr><th> (full build status): </th>
+    <td>&nbsp;</td>
     <td><code>http://img.shields.io/teamcity/http/teamcity.jetbrains.com/e/bt345.svg</code></td>
   </tr>
   <tr><th> AppVeyor: </th>
@@ -302,6 +239,10 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/hexpm/dt/plug.svg' alt=''/></td>
   <td><code>http://img.shields.io/hexpm/dt/plug.svg</code></td>
   </tr>
+  <tr><th> Wordpress: </th>
+  <td><img src='//img.shields.io/wordpress/plugin/dt/akismet.svg' alt=''/></td>
+  <td><code>http://img.shields.io/wordpress/plugin/dt/akismet.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Version </h3>
 <table><tbody>
@@ -385,13 +326,89 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/maven-central/v/org.apache.maven/apache-maven.svg' alt=''/></td>
   <td><code>http://img.shields.io/maven-central/v/org.apache.maven/apache-maven.svg</code></td>
   </tr>
+  <tr><th> Wordpress plugin: </th>
+  <td><img src='//img.shields.io/wordpress/plugin/v/akismet.svg' alt=''/></td>
+  <td><code>https://img.shields.io/wordpress/plugin/v/akismet.svg</code></td>
+  </tr>
+  <tr><th> Wordpress: </th>
+  <td><img src='//img.shields.io/wordpress/v/akismet.svg' alt=''/></td>
+  <td><code>https://img.shields.io/wordpress/v/akismet.svg</code></td>
+  </tr>
 </tbody></table>
 
-<h3> Issues </h3>
+<h3> Miscellaneous </h3>
 <table><tbody>
+  <tr><th> Gratipay: </th>
+    <td><img src='//img.shields.io/gratipay/JSFiddle.svg' alt=''/></td>
+    <td><code>http://img.shields.io/gratipay/JSFiddle.svg</code></td>
+  </tr>
+  <tr><th> Bountysource: </th>
+    <td><img src='//img.shields.io/bountysource/team/mozilla-core/activity.svg' alt=''/></td>
+    <td><code>http://img.shields.io/bountysource/team/mozilla-core/activity.svg</code></td>
+  </tr>
+  <tr><th> Code Climate: </th>
+    <td><img src='//img.shields.io/codeclimate/github/kabisaict/flow.svg' alt=''/></td>
+    <td><code>http://img.shields.io/codeclimate/github/kabisaict/flow.svg</code></td>
+  </tr>
+  <tr><th> Code Climate: </th>
+    <td><img src='//img.shields.io/codeclimate/coverage/github/triAGENS/ashikawa-core.svg' alt=''/></td>
+    <td><code>http://img.shields.io/codeclimate/coverage/github/triAGENS/ashikawa-core.svg</code></td>
+  </tr>
+  <tr><th> Gemnasium: </th>
+    <td><img src='//img.shields.io/gemnasium/mathiasbynens/he.svg' alt=''/></td>
+    <td><code>http://img.shields.io/gemnasium/mathiasbynens/he.svg</code></td>
+  </tr>
+  <tr><th> David: </th>
+    <td><img src='//img.shields.io/david/strongloop/express.svg' alt=''/></td>
+    <td><code>http://img.shields.io/david/strongloop/express.svg</code></td>
+  </tr>
+  <tr><th> David: </th>
+    <td><img src='//img.shields.io/david/dev/strongloop/express.svg' alt=''/></td>
+    <td><code>http://img.shields.io/david/dev/strongloop/express.svg</code></td>
+  </tr>
+  <tr><th> David: </th>
+    <td><img src='//img.shields.io/david/peer/webcomponents/generator-element.svg' alt=''/></td>
+    <td><code>http://img.shields.io/david/peer/webcomponents/generator-element.svg</code></td>
+  </tr>
+  <tr><th> Hackage-Deps: </th>
+    <td><img src='//img.shields.io/hackage-deps/v/lens.svg' alt=''/></td>
+    <td><code>http://img.shields.io/hackage-deps/v/lens.svg</code></td>
+  </tr>
+  <tr><th> Packagist: </th>
+    <td><img src='//img.shields.io/packagist/l/doctrine/orm.svg' alt=''/></td>
+    <td><code>http://img.shields.io/packagist/l/doctrine/orm.svg</code></td>
+  </tr>
+  <tr><th> npm: </th>
+    <td><img src='//img.shields.io/npm/l/express.svg' alt=''/></td>
+    <td><code>http://img.shields.io/npm/l/express.svg</code></td>
+  </tr>
+  <tr><th> PyPI: </th>
+    <td><img src='//img.shields.io/pypi/l/Django.svg' alt=''/></td>
+    <td><code>http://img.shields.io/pypi/l/Django.svg</code></td>
+  </tr>
+  <tr><th> Hex.pm: </th>
+    <td><img src='//img.shields.io/hexpm/l/plug.svg' alt=''/></td>
+    <td><code>http://img.shields.io/hexpm/l/plug.svg</code></td>
+  </tr>
+  <tr><th> CocoaPods: </th>
+    <td><img src='//img.shields.io/cocoapods/l/AFNetworking.svg' alt='' /></td>
+    <td><code>http://img.shields.io/cocoapods/l/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th> CocoaPods: </th>
+    <td><img src='//img.shields.io/cocoapods/p/AFNetworking.svg' alt='' /></td>
+    <td><code>http://img.shields.io/cocoapods/p/AFNetworking.svg</code></td>
+  </tr>
+  <tr><th> Wheelmap: </th>
+    <td><img src='//img.shields.io/wheelmap/a/2323004600.svg' alt='' /></td>
+    <td><code>http://img.shields.io/wheelmap/a/2323004600.svg</code></td>
+  </tr>
   <tr><th> GitHub: </th>
   <td><img src='//img.shields.io/github/issues/badges/shields.svg' alt=''/></td>
   <td><code>http://img.shields.io/github/issues/badges/shields.svg</code></td>
+  </tr>
+  <tr><th> Wordpress rating: </th>
+  <td><img src='//img.shields.io/wordpress/plugin/r/akismet.svg' alt=''/></td>
+  <td><code>http://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
   </tr>
 </tbody></table>
 
