website: include SourceForge

--- a/index.html
+++ b/index.html
@@ -243,6 +243,22 @@ I made the GitHub Badge Service.
   <td><img src='//img.shields.io/wordpress/plugin/dt/akismet.svg' alt=''/></td>
   <td><code>http://img.shields.io/wordpress/plugin/dt/akismet.svg</code></td>
   </tr>
+  <tr><th> SourceForge: </th>
+  <td><img src='//img.shields.io/sourceforge/dm/sevenzip.svg' alt=''/></td>
+  <td><code>http://img.shields.io/sourceforge/dm/sevenzip.svg</code></td>
+  </tr>
+  <tr><th> SourceForge: </th>
+  <td><img src='//img.shields.io/sourceforge/dw/sevenzip.svg' alt=''/></td>
+  <td><code>http://img.shields.io/sourceforge/dw/sevenzip.svg</code></td>
+  </tr>
+  <tr><th> SourceForge: </th>
+  <td><img src='//img.shields.io/sourceforge/dd/sevenzip.svg' alt=''/></td>
+  <td><code>http://img.shields.io/sourceforge/dd/sevenzip.svg</code></td>
+  </tr>
+  <tr><th> SourceForge: </th>
+  <td><img src='//img.shields.io/sourceforge/dt/sevenzip.svg' alt=''/></td>
+  <td><code>http://img.shields.io/sourceforge/dt/sevenzip.svg</code></td>
+  </tr>
 </tbody></table>
 <h3> Version </h3>
 <table><tbody>
