--- a/try.html
+++ b/try.html
@@ -389,6 +389,10 @@ I made the GitHub Badge Service.
     <td><img src='/hackage-deps/v/lens.svg' alt=''/></td>
     <td><code>http://img.shields.io/hackage-deps/v/lens.svg</code></td>
   </tr>
+  <tr><th> Requires.io: </th>
+    <td><img src='/requires/github/celery/celery.svg' alt=''/></td>
+    <td><code>http://img.shields.io/requires/github/celery/celery.svg</code></td>
+  </tr>
   <tr><th> Packagist: </th>
     <td><img src='/packagist/l/doctrine/orm.svg' alt=''/></td>
     <td><code>http://img.shields.io/packagist/l/doctrine/orm.svg</code></td>
