--- a/beta.html
+++ b/beta.html
@@ -345,6 +345,10 @@ the search.
     <td><img src='/hackage-deps/v/lens.svg' alt=''/></td>
     <td><code>http://img.shields.io/hackage-deps/v/lens.svg</code></td>
   </tr>
+  <tr><th> Requires.io: </th>
+    <td><img src='/requires/github/celery/celery.svg' alt=''/></td>
+    <td><code>http://img.shields.io/requires/github/celery/celery.svg</code></td>
+  </tr>
   <tr><th> Packagist: </th>
     <td><img src='/packagist/l/doctrine/orm.svg' alt=''/></td>
     <td><code>http://img.shields.io/packagist/l/doctrine/orm.svg</code></td>
