--- a/try.html
+++ b/try.html
@@ -393,6 +393,10 @@ I made the GitHub Badge Service.
     <td><img src='/requires/github/celery/celery.svg' alt=''/></td>
     <td><code>http://img.shields.io/requires/github/celery/celery.svg</code></td>
   </tr>
+  <tr><th> VersionEye: </th>
+    <td><img src='/versioneye/d/ruby/rails.svg' alt=''/></td>
+    <td><code>http://img.shields.io/versioneye/d/ruby/rails.svg</code></td>
+  </tr>
   <tr><th> Packagist: </th>
     <td><img src='/packagist/l/doctrine/orm.svg' alt=''/></td>
     <td><code>http://img.shields.io/packagist/l/doctrine/orm.svg</code></td>
