Beta: mention parameters.

--- a/beta.html
+++ b/beta.html
@@ -441,7 +441,7 @@ the search.
 <img src='/badge/color-ff69b4-ff69b4.svg' alt='ff69b4'/>
 </p>
 
-<h2> Flat Style </h2>
+<h2> Styles </h2>
 <p>
 One of those two designs may become the default one. Vote by using them!
 </p>
@@ -457,7 +457,12 @@ One of those two designs may become the default one. Vote by using them!
 </tbody></table>
 
 <p>
-We also support <code>.json</code>, but use that responsively.
+Override the default left-hand-side text with
+<code>?label=wow so healthy</code>.
+</p>
+<p>
+We also support <code>.json</code>, <code>.png</code> and a few others,
+but use that responsively.
 </p>
 
 <h2> Like This? </h2>
@@ -475,13 +480,9 @@ And tell us, we might be able to bring it to you anyway!
   style="border:0; background-color:transparent"
   width="95" height="20"></iframe>
 </p>
-
-<h2> Origin </h2>
-
 <p>
-<a href='https://github.com/h5bp/lazyweb-requests/issues/150'>This</a>.<br/>
-All the activity and the code sits
-<a href='https://github.com/badges/shields'>here</a>.
+<a href='https://github.com/h5bp/lazyweb-requests/issues/150'>This</a>
+is where the current server got started.
 </p>
 
 <h2> Contributors </h2>
