--- a/try.html
+++ b/try.html
@@ -123,6 +123,10 @@ I made the GitHub Badge Service.
     <td><img src='/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1.svg' alt=''/></td>
     <td><code>http://img.shields.io/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1.svg</code></td>
   </tr>
+  <tr><th> Codeship: </th>
+    <td><img src='/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1/master.svg' alt=''/></td>
+    <td><code>http://img.shields.io/codeship/d6c1ddd0-16a3-0132-5f85-2e35c05e22b1/master.svg</code></td>
+  </tr>
   <tr><th> Jenkins: </th>
     <td><img src='/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg' alt=''/></td>
     <td><code>http://img.shields.io/jenkins/s/https/jenkins.qa.ubuntu.com/precise-desktop-amd64_default.svg</code></td>
@@ -432,6 +436,10 @@ I made the GitHub Badge Service.
   <tr><th> Wordpress rating: </th>
   <td><img src='/wordpress/plugin/r/akismet.svg' alt=''/></td>
   <td><code>http://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
+  </tr>
+  <tr><th> Codacy: </th>
+  <td><img src='/codacy/e27821fb6289410b8f58338c7e0bc686.svg' alt=''/></td>
+  <td><code>http://img.shields.io/codacy/e27821fb6289410b8f58338c7e0bc686.svg</code></td>
   </tr>
 </tbody></table>
 
